--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "axios": "^1.7.9",
+    "@tanstack/react-query": "^5.74.3",
+    "axios": "^1.8.4",
     "next": "15.1.7",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
